assets/scss/common.scss
//  - Font sizes (px)
//  10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98

// - Spacing system (px)
// 2 / 4 / 8 / 12 / 16 / 20 / 24 / 32 / 48 / 64 / 80 / 96 / 128

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Zen Kaku Gothic New';
  line-height: 1.5;
  background-color: $black;
  color: $black;

  &.side-nav-open {
    max-height: 100vh;
    overflow: hidden;
  }
}

.grid {
  display: grid;
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
}

.container {
  max-width: 1140px;
  margin: 0 auto;
  padding: 0 20px;

  @include mq(sm) {
    padding: 0 28px;
  }
}

.center {
  text-align: center;
}

.btn {
  display: inline-block;
  margin: 0 auto;
  color: $white;
  font-size: 16px;
  font-weight: 700;
  background-color: $primary;
  border-radius: 24px;
  padding: 8px 24px;

  @include mq(sm) {
    font-size: 18px;
  }

  @include mq(md) {
    font-size: 20px;
    padding: 10px 32px;
    border-radius: 32px;
  }
}

